--- a/app/static/index.html
+++ b/app/static/index.html
@@ -20,11 +20,7 @@
         <app-header></app-header>
         <main>
             <div class="container">
-                <div class="text-center">
-                    <img src="/static/images/logo.png" alt="VueJS Logo">
-                    <h1>{{ welcome }}</h1>
-                </div>
-                <news-list></news-list>
+              <router-view></router-view>
             </div>
         </main>
         <app-footer></app-footer>
